--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -10,5 +10,6 @@
     "navbar__orgs": "Organisationen",
     "navbar__works": "Werke",
     "navbar__search": "Suche",
-    "navbar__imprint": "Impressum"
+    "navbar__imprint": "Impressum",
+    "navbar__druckers": "Drucker"
 }
