--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -10,5 +10,6 @@
     "navbar__orgs": "Institutions",
     "navbar__works": "Works",
     "navbar__search": "Search",
-    "navbar__imprint": "Imprint"
+    "navbar__imprint": "Imprint",
+    "navbar__druckers": "Printer"
 }
