--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -10,5 +10,6 @@
     "navbar__orgs": "Organizzazioni",
     "navbar__works": "Opere",
     "navbar__search": "Cercare",
-    "navbar__imprint": "Impronta"
+    "navbar__imprint": "Impronta",
+    "navbar__druckers": "Tipografo"
 }
