--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -1,7 +1,8 @@
 {
     "navbar__project": "Project",
+    "navbar__intro": "Introduction",
     "navbar__about": "About the project",
-    "navbar__toc": "Edition units",
+    "navbar__toc": "Books",
     "navbar__nofacs": "Without facsimiles",
     "navbar__withfacs": "With facsimiles",
     "navbar__register": "Register",
@@ -10,5 +11,6 @@
     "navbar__orgs": "Institutions",
     "navbar__works": "Works",
     "navbar__search": "Search",
-    "navbar__imprint": "Imprint"
+    "navbar__imprint": "Imprint",
+    "navbar__books": "The Choirbooks"
 }
