deploy: 389e7c44e9251c073e6fe0a8b4cc07c0a97e164d

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -12,5 +12,5 @@
     "navbar__works": "Werke",
     "navbar__search": "Suche",
     "navbar__imprint": "Impressum",
-    "navbar__books": "Die Choralhandschriften"
+    "navbar__books": "Die Choralhandschriften und Drucke"
 }
