--- a/locales/es/translation.json
+++ b/locales/es/translation.json
@@ -12,5 +12,5 @@
     "navbar__works": "Obras",
     "navbar__search": "Búsqueda",
     "navbar__imprint": "Aviso legal",
-    "navbar__books": "Los cantorales"
+    "navbar__books": "Los manuscritos y libros cantorales"
 }
