--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -12,5 +12,5 @@
     "navbar__works": "Works",
     "navbar__search": "Search",
     "navbar__imprint": "Imprint",
-    "navbar__books": "The Choirbooks"
+    "navbar__books": "The choir manuscripts and books"
 }
