deploy: a0caa381d6e40390e97cd2e83142aaba6213498b

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -12,5 +12,5 @@
     "navbar__works": "Works",
     "navbar__search": "Search",
     "navbar__imprint": "Imprint",
-    "navbar__books": "The choir manuscripts and books"
+    "navbar__books": "The choirbook manuscripts and prints"
 }
