--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -12,5 +12,5 @@
     "navbar__works": "Opere",
     "navbar__search": "Cercare",
     "navbar__imprint": "Impronta",
-    "navbar__books": "I manoscritti e libri corali"
+    "navbar__books": "I manoscritti e stampe di corali"
 }
