deploy: 69e188bcbe38f46f9bc8c444d23ad59d2f045f81

--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -11,6 +11,6 @@
     "navbar__orgs": "Organizzazioni",
     "navbar__works": "Opere",
     "navbar__search": "Cercare",
-    "navbar__imprint": "Impronta",
+    "navbar__imprint": "Note legali",
     "navbar__books": "I manoscritti e stampe di corali"
 }
