deploy: e98ac9323763f3b8cea5058d167304d5271d96dc

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -13,7 +13,7 @@
     "navbar__search": "Suche",
     "navbar__imprint": "Impressum",
     "navbar__books": "Die Choralhandschriften und Drucke",
-    "table__titel": "Titel",
+    "table__title": "Titel",
     "table__file": "Dateiname",
     "table__liturgy": "Liturgie",
     "table__booktype": "Buchtyp",
