--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -13,7 +13,7 @@
     "navbar__search": "Search",
     "navbar__imprint": "Imprint",
     "navbar__books": "The choirbook manuscripts and prints",
-    "table__titel": "Title",
+    "table__title": "Title",
     "table__file": "File name",
     "table__liturgy": "Liturgy",
     "table__booktype": "Book type",
