--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -13,7 +13,7 @@
     "navbar__search": "Cercare",
     "navbar__imprint": "Note legali",
     "navbar__books": "I manoscritti e stampe di corali",
-    "table__titel": "Titulo",
+    "table__title": "Titulo",
     "table__file": "Nome del file",
     "table__liturgy": "Liturgia",
     "table__booktype": "Tipo di libro",
