deploy: 8c3b44517be20c028de89388b441c99353c2c9e0

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -22,5 +22,6 @@
     "table__folia": "Folia",
     "table__height": "Height",
     "table__width": "Width",
-    "table__description": "Description"
+    "table__description": "Description",
+    "place_placename": "Place name"
 }
