--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -22,5 +22,6 @@
     "table__folia": "Folia",
     "table__height": "Höhe",
     "table__width": "Breite",
-    "table__description": "Beschreibung"
+    "table__description": "Beschreibung",
+    "place_placename": "Ortsname"
 }
