--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -12,7 +12,7 @@
     "navbar__works": "Werke",
     "navbar__search": "Suche",
     "navbar__imprint": "Impressum",
-    "navbar__books": "Die Choralhandschriften und Drucke",
+    "navbar__books": "Die Quellen",
     "table__title": "Titel",
     "table__file": "Dateiname",
     "table__liturgy": "Liturgie",
