--- a/locales/it/translation.json
+++ b/locales/it/translation.json
@@ -12,7 +12,7 @@
     "navbar__works": "Opere",
     "navbar__search": "Cercare",
     "navbar__imprint": "Note legali",
-    "navbar__books": "I manoscritti e stampe di corali",
+    "navbar__books": "I fonti",
     "table__title": "Titulo",
     "table__file": "Nome del file",
     "table__liturgy": "Liturgia",
