deploy: 019f6b6f67f0e809c4f006eca082890275da3bc1

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -12,7 +12,7 @@
     "navbar__works": "Werke",
     "navbar__search": "Suche",
     "navbar__imprint": "Impressum",
-    "navbar__books": "Die Quellen",
+    "navbar__books": "Über die Quellen",
     "table__title": "Titel",
     "table__file": "Dateiname",
     "table__liturgy": "Liturgie",
