--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -12,7 +12,7 @@
     "navbar__works": "Works",
     "navbar__search": "Search",
     "navbar__imprint": "Imprint",
-    "navbar__books": "The sources",
+    "navbar__books": "About the sources",
     "table__title": "Title",
     "table__file": "File name",
     "table__liturgy": "Liturgy",
